--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "dependencies": {
     "@material-ui/core": "4.2.0",
     "@material-ui/icons": "4.2.1",
-    "moment": "2.24.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-fetch-hook": "1.6.4",
     "react-scripts": "3.0.1",
+    "react-truncate": "2.4.0",
     "styled-components": "4.3.2"
   },
   "devDependencies": {
